syntax = "proto3";
option go_package = "tsuwari/grpc/emotes_cacher";
package emotes_cacher;
import "google/protobuf/empty.proto";

service EmotesCacher {
  rpc CacheEmotes(Request) returns (google.protobuf.Empty) {}
}

message Request {
  string channelId = 1;
}